[gd_scene load_steps=8 format=2]

[ext_resource path="res://worlds/castle/map.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://worlds/castle/door/door.tscn" type="PackedScene" id=3]
[ext_resource path="res://worlds/castle/enemies.gd" type="Script" id=4]
[ext_resource path="res://worlds/castle/game_controller.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160.375, 9 )

[sub_resource type="Environment" id=2]
background_mode = 1

[node name="world" type="Node2D"]
script = ExtResource( 5 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="door" parent="." instance=ExtResource( 3 )]

[node name="player" parent="." instance=ExtResource( 2 )]

[node name="walls" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls"]
position = Vector2( 4, -86 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="walls"]
position = Vector2( 163, 4.375 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="walls"]
position = Vector2( -161, -12 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="walls"]
position = Vector2( -1, 79 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="CanvasLayer"]
environment = SubResource( 2 )

[node name="enemies" type="Node2D" parent="."]
script = ExtResource( 4 )

[connection signal="down_door_entered" from="door" to="." method="_on_door_down_door_entered"]
[connection signal="left_door_entered" from="door" to="." method="_on_door_left_door_entered"]
[connection signal="right_door_entered" from="door" to="." method="_on_door_right_door_entered"]
[connection signal="up_door_entered" from="door" to="." method="_on_door_up_door_entered"]
